--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -44,8 +44,40 @@
   }
 }
 
+.fixed {
+  position: fixed
+}
+
+.absolute {
+  position: absolute
+}
+
+.relative {
+  position: relative
+}
+
+.top-0 {
+  top: 0px
+}
+
+.right-0 {
+  right: 0px
+}
+
+.z-20 {
+  z-index: 20
+}
+
+.z-10 {
+  z-index: 10
+}
+
 .m-8 {
   margin: 2rem
+}
+
+.-m-4 {
+  margin: -1rem
 }
 
 .my-3 {
@@ -73,6 +105,11 @@
   margin-bottom: 1rem
 }
 
+.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem
+}
+
 .mb-8 {
   margin-bottom: 2rem
 }
@@ -97,12 +134,36 @@
   margin-bottom: 3rem
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem
+}
+
+.ml-2 {
+  margin-left: 0.5rem
+}
+
+.mr-3 {
+  margin-right: 0.75rem
+}
+
+.ml-auto {
+  margin-left: auto
+}
+
+.mr-1 {
+  margin-right: 0.25rem
+}
+
 .inline-block {
   display: inline-block
 }
 
 .flex {
   display: flex
+}
+
+.inline-flex {
+  display: inline-flex
 }
 
 .hidden {
@@ -115,6 +176,22 @@
 
 .h-6 {
   height: 1.5rem
+}
+
+.h-full {
+  height: 100%
+}
+
+.h-4 {
+  height: 1rem
+}
+
+.h-24 {
+  height: 6rem
+}
+
+.h-12 {
+  height: 3rem
 }
 
 .min-h-screen {
@@ -131,6 +208,18 @@
 
 .w-6 {
   width: 1.5rem
+}
+
+.w-4 {
+  width: 1rem
+}
+
+.w-24 {
+  width: 6rem
+}
+
+.w-12 {
+  width: 3rem
 }
 
 .max-w-sm {
@@ -165,6 +254,10 @@
   flex-direction: column
 }
 
+.flex-wrap {
+  flex-wrap: wrap
+}
+
 .items-center {
   align-items: center
 }
@@ -177,6 +270,10 @@
   justify-content: space-between
 }
 
+.overflow-hidden {
+  overflow: hidden
+}
+
 .rounded {
   border-radius: 0.25rem
 }
@@ -185,12 +282,32 @@
   border-radius: 0.75rem
 }
 
+.rounded-lg {
+  border-radius: 0.5rem
+}
+
+.rounded-full {
+  border-radius: 9999px
+}
+
 .border {
   border-width: 1px
 }
 
+.border-2 {
+  border-width: 2px
+}
+
+.border-4 {
+  border-width: 4px
+}
+
 .border-b {
   border-bottom-width: 1px
+}
+
+.border-r-2 {
+  border-right-width: 2px
 }
 
 .border-primary {
@@ -200,6 +317,25 @@
 
 .border-transparent {
   border-color: transparent
+}
+
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity))
+}
+
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity))
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity))
+}
+
+.border-opacity-60 {
+  --tw-border-opacity: 0.6
 }
 
 .bg-primary {
@@ -232,8 +368,32 @@
   background-color: rgb(17 24 39 / var(--tw-bg-opacity))
 }
 
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity))
+}
+
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity))
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover
+}
+
+.object-center {
+  -o-object-position: center;
+     object-position: center
+}
+
 .p-4 {
   padding: 1rem
+}
+
+.p-6 {
+  padding: 1.5rem
 }
 
 .px-4 {
@@ -271,8 +431,27 @@
   padding-right: 1.5rem
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem
+}
+
 .pb-12 {
   padding-bottom: 3rem
+}
+
+.pr-3 {
+  padding-right: 0.75rem
 }
 
 .text-center {
@@ -302,6 +481,11 @@
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem
 }
 
 .font-light {
@@ -336,8 +520,20 @@
   line-height: 1.25
 }
 
+.leading-relaxed {
+  line-height: 1.625
+}
+
+.leading-none {
+  line-height: 1
+}
+
 .tracking-tight {
   letter-spacing: -0.025em
+}
+
+.tracking-widest {
+  letter-spacing: 0.1em
 }
 
 .text-gray-800 {
@@ -385,9 +581,25 @@
   color: rgb(59 130 246 / var(--tw-text-opacity))
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity))
+}
+
+.text-indigo-500 {
+  --tw-text-opacity: 1;
+  color: rgb(99 102 241 / var(--tw-text-opacity))
+}
+
 .antialiased {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
 
 .transition-colors {
@@ -525,12 +737,28 @@ body {
     margin-bottom: 1.5rem
   }
 
+  .md\:mb-2 {
+    margin-bottom: 0.5rem
+  }
+
+  .md\:ml-0 {
+    margin-left: 0px
+  }
+
   .md\:flex {
     display: flex
   }
 
+  .md\:h-36 {
+    height: 9rem
+  }
+
   .md\:w-1\/2 {
     width: 50%
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%
   }
 
   .md\:text-3xl {
@@ -554,6 +782,14 @@ body {
     margin-top: 0px
   }
 
+  .lg\:mb-0 {
+    margin-bottom: 0px
+  }
+
+  .lg\:ml-auto {
+    margin-left: auto
+  }
+
   .lg\:block {
     display: block
   }
@@ -564,6 +800,10 @@ body {
 
   .lg\:hidden {
     display: none
+  }
+
+  .lg\:h-48 {
+    height: 12rem
   }
 
   .lg\:items-center {
