Visual changes on cards for the inicial page.

--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ Description: .
 Version: 1.0.0
 License: MIT
 License URI: https://github.com/jeffreyvr/tailpress/blob/master/LICENSE
-Text Domain: tailpress
+Text Domain: enfermagem
 */
