--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -44,34 +44,6 @@
   }
 }
 
-.fixed {
-  position: fixed
-}
-
-.absolute {
-  position: absolute
-}
-
-.relative {
-  position: relative
-}
-
-.top-0 {
-  top: 0px
-}
-
-.right-0 {
-  right: 0px
-}
-
-.z-20 {
-  z-index: 20
-}
-
-.z-10 {
-  z-index: 10
-}
-
 .m-8 {
   margin: 2rem
 }
@@ -105,11 +77,6 @@
   margin-bottom: 1rem
 }
 
-.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem
-}
-
 .mb-8 {
   margin-bottom: 2rem
 }
@@ -122,36 +89,44 @@
   margin-bottom: 2.5rem
 }
 
-.mb-4 {
-  margin-bottom: 1rem
-}
-
 .mb-1 {
   margin-bottom: 0.25rem
 }
 
-.mb-12 {
-  margin-bottom: 3rem
+.mt-8 {
+  margin-top: 2rem
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem
+.mr-2 {
+  margin-right: 0.5rem
+}
+
+.mt-auto {
+  margin-top: auto
+}
+
+.mr-4 {
+  margin-right: 1rem
+}
+
+.mt-3 {
+  margin-top: 0.75rem
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem
+}
+
+.mt-0 {
+  margin-top: 0px
 }
 
 .ml-2 {
   margin-left: 0.5rem
 }
 
-.mr-3 {
-  margin-right: 0.75rem
-}
-
-.ml-auto {
-  margin-left: auto
-}
-
-.mr-1 {
-  margin-right: 0.25rem
+.block {
+  display: block
 }
 
 .inline-block {
@@ -162,8 +137,8 @@
   display: flex
 }
 
-.inline-flex {
-  display: inline-flex
+.grid {
+  display: grid
 }
 
 .hidden {
@@ -178,20 +153,20 @@
   height: 1.5rem
 }
 
+.h-64 {
+  height: 16rem
+}
+
+.h-8 {
+  height: 2rem
+}
+
+.h-4\/5 {
+  height: 80%
+}
+
 .h-full {
   height: 100%
-}
-
-.h-4 {
-  height: 1rem
-}
-
-.h-24 {
-  height: 6rem
-}
-
-.h-12 {
-  height: 3rem
 }
 
 .min-h-screen {
@@ -210,16 +185,8 @@
   width: 1.5rem
 }
 
-.w-4 {
-  width: 1rem
-}
-
-.w-24 {
-  width: 6rem
-}
-
-.w-12 {
-  width: 3rem
+.w-8 {
+  width: 2rem
 }
 
 .max-w-sm {
@@ -230,8 +197,16 @@
   max-width: 960px
 }
 
+.max-w-6xl {
+  max-width: 72rem
+}
+
 .flex-none {
   flex: none
+}
+
+.flex-1 {
+  flex: 1 1 0%
 }
 
 .flex-grow {
@@ -250,6 +225,20 @@
   list-style-type: decimal
 }
 
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr))
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr))
+}
+
 .flex-col {
   flex-direction: column
 }
@@ -262,6 +251,10 @@
   align-items: center
 }
 
+.justify-end {
+  justify-content: flex-end
+}
+
 .justify-center {
   justify-content: center
 }
@@ -270,8 +263,25 @@
   justify-content: space-between
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse))
+}
+
 .overflow-hidden {
   overflow: hidden
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap
+}
+
+.break-normal {
+  overflow-wrap: normal;
+  word-break: normal
 }
 
 .rounded {
@@ -282,32 +292,36 @@
   border-radius: 0.75rem
 }
 
-.rounded-lg {
-  border-radius: 0.5rem
-}
-
 .rounded-full {
   border-radius: 9999px
+}
+
+.rounded-t {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem
+}
+
+.rounded-b-none {
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px
+}
+
+.rounded-b {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem
+}
+
+.rounded-t-none {
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px
 }
 
 .border {
   border-width: 1px
 }
 
-.border-2 {
-  border-width: 2px
-}
-
-.border-4 {
-  border-width: 4px
-}
-
 .border-b {
   border-bottom-width: 1px
-}
-
-.border-r-2 {
-  border-right-width: 2px
 }
 
 .border-primary {
@@ -319,23 +333,9 @@
   border-color: transparent
 }
 
-.border-gray-200 {
+.border-secondary {
   --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity))
-}
-
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity))
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity))
-}
-
-.border-opacity-60 {
-  --tw-border-opacity: 0.6
+  border-color: rgb(20 184 166 / var(--tw-border-opacity))
 }
 
 .bg-primary {
@@ -368,28 +368,34 @@
   background-color: rgb(17 24 39 / var(--tw-bg-opacity))
 }
 
-.bg-gray-300 {
+.bg-green-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity))
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity))
 }
 
-.bg-gray-800 {
+.bg-green-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity))
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity))
 }
 
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover
-}
-
-.object-center {
-  -o-object-position: center;
-     object-position: center
+.bg-cover {
+  background-size: cover
 }
 
 .p-4 {
   padding: 1rem
+}
+
+.p-8 {
+  padding: 2rem
+}
+
+.p-1 {
+  padding: 0.25rem
+}
+
+.p-3 {
+  padding: 0.75rem
 }
 
 .p-6 {
@@ -441,6 +447,11 @@
   padding-bottom: 6rem
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem
@@ -450,12 +461,32 @@
   padding-bottom: 3rem
 }
 
-.pr-3 {
-  padding-right: 0.75rem
+.pt-4 {
+  padding-top: 1rem
+}
+
+.pr-0 {
+  padding-right: 0px
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem
 }
 
 .text-center {
   text-align: center
+}
+
+.font-sans {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+}
+
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif
 }
 
 .text-5xl {
@@ -483,6 +514,15 @@
   line-height: 2.25rem
 }
 
+.text-xl {
+  font-size: 1.25rem
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem
@@ -508,6 +548,10 @@
   font-weight: 600
 }
 
+.font-normal {
+  font-weight: 400
+}
+
 .uppercase {
   text-transform: uppercase
 }
@@ -520,20 +564,16 @@
   line-height: 1.25
 }
 
-.leading-relaxed {
-  line-height: 1.625
-}
-
-.leading-none {
-  line-height: 1
+.leading-normal {
+  line-height: 1.5
 }
 
 .tracking-tight {
   letter-spacing: -0.025em
 }
 
-.tracking-widest {
-  letter-spacing: 0.1em
+.tracking-wider {
+  letter-spacing: 0.05em
 }
 
 .text-gray-800 {
@@ -581,14 +621,9 @@
   color: rgb(59 130 246 / var(--tw-text-opacity))
 }
 
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity))
-}
-
-.text-indigo-500 {
-  --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity))
+.no-underline {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none
 }
 
 .antialiased {
@@ -596,9 +631,15 @@
   -moz-osx-font-smoothing: grayscale
 }
 
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
 
@@ -701,6 +742,16 @@ body {
   max-width: 100%
 }
 
+.hover\:bg-green-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity))
+}
+
+.hover\:no-underline:hover {
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px
@@ -737,20 +788,20 @@ body {
     margin-bottom: 1.5rem
   }
 
-  .md\:mb-2 {
-    margin-bottom: 0.5rem
+  .md\:mt-0 {
+    margin-top: 0px
   }
 
-  .md\:ml-0 {
-    margin-left: 0px
+  .md\:mt-10 {
+    margin-top: 2.5rem
+  }
+
+  .md\:inline-block {
+    display: inline-block
   }
 
   .md\:flex {
     display: flex
-  }
-
-  .md\:h-36 {
-    height: 9rem
   }
 
   .md\:w-1\/2 {
@@ -761,9 +812,32 @@ body {
     width: 33.333333%
   }
 
+  .md\:p-24 {
+    padding: 6rem
+  }
+
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem
+  }
+
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem
   }
 }
 
@@ -778,16 +852,13 @@ body {
     margin-right: 1rem
   }
 
+  .lg\:my-5 {
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem
+  }
+
   .lg\:mt-0 {
     margin-top: 0px
-  }
-
-  .lg\:mb-0 {
-    margin-bottom: 0px
-  }
-
-  .lg\:ml-auto {
-    margin-left: auto
   }
 
   .lg\:block {
@@ -800,10 +871,6 @@ body {
 
   .lg\:hidden {
     display: none
-  }
-
-  .lg\:h-48 {
-    height: 12rem
   }
 
   .lg\:items-center {
