--- a/css/app.css
+++ b/css/app.css
@@ -607,10 +607,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
 }
@@ -623,20 +619,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.5rem;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-64 {
   height: 16rem;
 }
 
 .h-8 {
   height: 2rem;
-}
-
-.h-4\/5 {
-  height: 80%;
-}
-
-.h-full {
-  height: 100%;
 }
 
 .min-h-screen {
@@ -701,14 +693,6 @@ Ensure the default browser behavior of the `hidden` attribute.
           appearance: none;
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -769,11 +753,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-t {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem;
-}
-
-.rounded-b-none {
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
 }
 
 .rounded-b {
@@ -943,10 +922,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 1.5rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
 .text-center {
   text-align: center;
 }
@@ -974,6 +949,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -986,11 +966,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .text-xl {
   font-size: 1.25rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .text-xs {
@@ -1059,6 +1034,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
 }
 
 .text-gray-900 {
@@ -1251,6 +1236,112 @@ article > *:not(.entry-content), .entry-content > * {
       list-style-type: decimal;
     }
 
+/* Comments Text */
+
+.comment-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.comments-area {
+  display: flex;
+  flex-direction: column;
+}
+
+.comment-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.comment-body {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  padding: 20px 0;
+}
+
+.comment-body .comment-box {
+  margin-left: 1rem;
+}
+
+.comment-body .vcard {
+  display: flex;
+  gap: 20px;
+}
+
+.comment-body .vcard .says {
+  display: none;
+}
+
+.comment-body .vcard .avatar {
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+}
+
+.comment-name {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.comment-name .fn {
+  font-weight: bold;
+  font-style: normal;
+}
+
+.comment-text {
+  margin: 10px 0;
+}
+
+.children {
+  padding-left: 30px;
+  background-color: rgba(248,249,250 ,1 );
+}
+
+.children .comment {
+  border-bottom: 1px solid rgb(229 231 235) ;
+}
+
+.children .comment-box {
+  font-size: .925rem;
+}
+
+.children .reply {
+  display: none;
+}
+
+.children .avatar {
+  width: 1.75rem;
+  height: 1.75rem;
+}
+
+.children .comment-text {
+  margin: 0;
+}
+
+/* Comment Form */
+
+.comment-form-url {
+  display: none;
+}
+
+.comment-form {
+  margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
+}
+
+.comment-form-author  input,
+.comment-form-email input {
+  border: 1px solid rgb(229 231 235);
+  border-radius: 3px;
+}
+
 .hover\:bg-green-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
@@ -1315,10 +1406,6 @@ article > *:not(.entry-content), .entry-content > * {
 
   .md\:w-1\/2 {
     width: 50%;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .md\:p-24 {
