--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -137,10 +137,6 @@
   display: flex
 }
 
-.grid {
-  display: grid
-}
-
 .hidden {
   display: none
 }
@@ -153,20 +149,16 @@
   height: 1.5rem
 }
 
+.h-full {
+  height: 100%
+}
+
 .h-64 {
   height: 16rem
 }
 
 .h-8 {
   height: 2rem
-}
-
-.h-4\/5 {
-  height: 80%
-}
-
-.h-full {
-  height: 100%
 }
 
 .min-h-screen {
@@ -231,14 +223,6 @@
           appearance: none
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr))
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr))
-}
-
 .flex-col {
   flex-direction: column
 }
@@ -299,11 +283,6 @@
 .rounded-t {
   border-top-left-radius: 0.25rem;
   border-top-right-radius: 0.25rem
-}
-
-.rounded-b-none {
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px
 }
 
 .rounded-b {
@@ -473,10 +452,6 @@
   padding-bottom: 1.5rem
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem
-}
-
 .text-center {
   text-align: center
 }
@@ -504,6 +479,11 @@
   line-height: 1.75rem
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem
@@ -516,11 +496,6 @@
 
 .text-xl {
   font-size: 1.25rem
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem
 }
 
 .text-xs {
@@ -589,6 +564,16 @@
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity))
+}
+
+.text-slate-400 {
+  --tw-text-opacity: 1;
+  color: rgb(148 163 184 / var(--tw-text-opacity))
+}
+
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity))
 }
 
 .text-gray-900 {
@@ -806,10 +791,6 @@ body {
 
   .md\:w-1\/2 {
     width: 50%
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%
   }
 
   .md\:p-24 {
