--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -40,3 +40,111 @@ article > *:not(.entry-content),
         }
     }
 }
+
+/* Comments Text */
+
+.comment-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.comments-area {
+    display: flex;
+    flex-direction: column;
+}
+
+.comment-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.comment-body {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    padding: 20px 0; 
+}
+
+.comment-body .comment-box {
+    margin-left: 1rem; 
+}
+
+.comment-body .vcard {
+    display: flex;
+    gap: 20px;
+}
+
+.comment-body .vcard .says {
+    display: none;
+}
+
+.comment-body .vcard .avatar {
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+}
+
+.comment-name {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.comment-name .fn {
+    font-weight: bold;
+    font-style: normal;
+}
+
+.comment-text {
+    margin: 10px 0;
+}
+
+.children {
+    padding-left: 30px;
+    background-color: rgba(248,249,250 ,1 );
+}
+
+.children .comment {
+    border-bottom: 1px solid rgb(229 231 235) ;
+}
+
+.children .comment-box {
+    font-size: .925rem;
+}
+
+.children .reply {
+    display: none;
+}
+
+.children .avatar {
+    width: 1.75rem;
+    height: 1.75rem;
+}
+
+.children .comment-text {
+    margin: 0;
+}
+
+
+/* Comment Form */
+
+.comment-form-url {
+    display: none;
+}
+
+
+.comment-form {
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+}
+
+.comment-form-author  input,
+.comment-form-email input {
+    border: 1px solid rgb(229 231 235);
+    border-radius: 3px;
+}
