--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -69,11 +69,14 @@ article > *:not(.entry-content),
 }
 
 .comment-body .comment-box {
+    width: 100%;
     margin-left: 1rem; 
 }
 
 .comment-body .vcard {
     display: flex;
+    width: 100%;
+    max-width: 3rem;
     gap: 20px;
 }
 
@@ -148,3 +151,4 @@ article > *:not(.entry-content),
     border: 1px solid rgb(229 231 235);
     border-radius: 3px;
 }
+
