--- a/css/app.css
+++ b/css/app.css
@@ -1350,6 +1350,11 @@ article > *:not(.entry-content), .entry-content > * {
   border-radius: 3px;
 }
 
+.thumnail-card {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .hover\:bg-green-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
